--- a/src/view/EditarCliente.form
+++ b/src/view/EditarCliente.form
@@ -134,7 +134,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="24" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Editar e excluir cliente"/>
+        <Property name="text" type="java.lang.String" value="Editar e Excluir Cliente"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
